@@ -35,7 +35,7 @@ DialogSpace::DialogSpace(bool isPrst, int noteMin, int noteMax, QWidget *parent)
     _noteMax(noteMax)
 {
     ui->setupUi(this);
-    this->setWindowFlags(windowFlags() & ~Qt::WindowContextHelpButtonHint | Qt::Tool);
+    this->setWindowFlags((windowFlags() & ~Qt::WindowContextHelpButtonHint) | Qt::Tool);
     Config * conf = Config::getInstance();
     ui->comboMotif->blockSignals(true);
     ui->comboMotif->setCurrentIndex(conf->getTools_i_space_motif(isPrst));
